--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <h1>REEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE</h1>
-<!-- Hey there! Please go away, this a hosting page. There is nothing to find ;) -->
+<!--Hey there! Please go away, this a hosting page. There is nothing to see.-->
