--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1>REEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE</h1>
 <!--Hey there! Please go away, this a hosting page. There is nothing to see.-->
-<!--***it just works***-->
+<!--I have to edit this everytime I change code-->
